# aiortc

./: .coveragerc  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  MANIFEST.in  README.rst  install.sh  instructions.md  mypy.ini  pyproject.toml  setup.cfg  setup.py  setup_dc.py
.github/: ISSUE_TEMPLATE.rst
.github/workflows/: issues.yml  tests.yml
.travis/: build-codecs  build-libsrtp  install  script
_cffi_src/: build_opus.py  build_vpx.py
aioquic/: __init__.py  _crypto.pyi  buffer.py  client.py  configuration.py  connection.py  crypto.py  events.py  loss.py  packet.py  packet_builder.py  rangeset.py  recovery.py  retry.py  server.py  stream.py  tls.py
aioquic/asyncio/: __init__.py  client.py  compat.py  protocol.py  server.py
aioquic/h0/: connection.py
aioquic/h3/: connection.py  events.py
aioquic/quic/: configuration.py  connection.py  crypto.py  events.py  logger.py  packet.py  packet_builder.py  recovery.py  stream.py
aiortc/: __init__.py  clock.py  codecs.py  dtls.py  events.py  jitterbuffer.py  mediastreams.py  rate.py  rtcconfiguration.py  rtcdatachannel.py  rtcdtlstransport.py  rtcicetransport.py  rtcpeerconnection.py  rtcrtpparameters.py  rtcrtpreceiver.py  rtcrtpsender.py  rtcrtptransceiver.py  rtcsctptransport.py  rtcsessiondescription.py  rtp.py  sctp.py  sdp.py  stats.py  utils.py
aiortc/codecs/: __init__.py  base.py  g711.py  h264.py  opus.py  passthrough.py  vpx.py
aiortc/contrib/: media.py  signaling.py
aiowebrtc/: __init__.py  dtls.crt  dtls.key  dtls.py  exceptions.py  rtcdatachannel.py  rtcpeerconnection.py  rtcrtpsender.py  rtcrtptransceiver.py  rtcsctptransport.py  rtcsessiondescription.py  sctp.py  sdp.py  utils.py
docs/: Makefile  api.rst  asyncio.rst  changelog.rst  conf.py  contributing.rst  core.rst  design.rst  examples.rst  h3.rst  helpers.rst  http3.rst  http_client.py  index.rst  quic.rst
examples/: cli.py  client.py  demo.py  http3-client.py  http3-server.py  http3.py  http3_client.py  http3_server.py  httpx_client.py  interop.py  server.py  siduck_client.py  signaling.py  wsgi.py
examples/apprtc/: README.rst  apprtc.py
examples/computer-vision-server-side-streaming/: index.html  model.py  readme.md  server.py  shm.py  video.py
examples/datachannel-cli/: README.rst  cli.py
examples/datachannel-filexfer/: README.rst  README_WS_SIGNALING_VERSION.rst  filexfer-ws-signaling.py  filexfer.py  import_test.py  ws-signaling-server.py  wssignaling.py
examples/datachannel-vpn/: README.md  README.rst  signaling.py  tuntap.py  vpn.py
examples/gstreamer/: README.rst  gstreamercam.py  h264track.py
examples/htdocs/: index.html  style.css
examples/janus/: README.rst  hard_encode_to_uds.py  janus.py  janus_v4l2.py  read_raw_video_from_uds.py
examples/picamera/: README.rst  client.js  index.html  picam.py  pitrack.py
examples/remux/: README.rst  client.js  index.html  server.py
examples/server/: Dockerfile  README.rst  client.js  client_get.py  demo-instruct.ulaw  docker-compose.yml  example.json  get.py  index.html  server.py
examples/socketio-webcam-videostream/: README.md
examples/socketio-webcam-videostream/pycli/: cli.py  requirements.txt
examples/socketio-webcam-videostream/server/: package.json  tsconfig.json
examples/templates/: index.html  logs.html
examples/tmp/: asyncio_read_std_as_pipe.py  hard_encode_to_popen.py  output_raw_rgb_image.py  popen_read_std_as_pipe.py  stdout_same_line.py
examples/videostream-cli/: .gitignore  README.rst  cli.py  run.sh  run_exp.sh  signaling.py
examples/vpn/: tuntap.py  vpn.py
examples/webcam/: README.rst  client.js  index.html  webcam.py
examples/webcam_multi/: client.js  index.html  webcam.py
requirements/: doc.txt  lint.txt
scripts/: build-codecs  fetch-codecs  fetch-vendor  fetch-vendor.json  fetch-vendor.py
src/: _buffer.c  _crypto.c  build_opus.py  build_vpx.py
src/_cffi_src/: build_opus.py  build_vpx.py
src/aioquic/: __init__.py  _buffer.c  _crypto.c  buffer.py
src/aioquic/asyncio/: client.py
src/aioquic/h0/: connection.py
src/aioquic/h3/: connection.py
src/aioquic/quic/: configuration.py  connection.py  crypto.py  events.py  logger.py  packet.py  packet_builder.py  recovery.py
src/aiortc/: __init__.py  about.py  av.py  events.py  exceptions.py  jitterbuffer.py  mediastreams.py  rate.py  rtcconfiguration.py  rtcdatachannel.py  rtcdtlstransport.py  rtcicetransport.py  rtcpeerconnection.py  rtcrtpparameters.py  rtcrtpreceiver.py  rtcrtpsender.py  rtcrtptransceiver.py  rtcsctptransport.py  rtcsessiondescription.py  rtp.py  sdp.py  socks5.py  stats.py
src/aiortc/codecs/: .gitignore  __init__.py  base.py  g711.py  g722.py  h264.py  keypointcodec.py  keypoints.proto  keypoints_pb2.py  opus.py  vpx.py
src/aiortc/contrib/: getkeypoints.py  (+2 more)
src/vsaiortc/: __init__.py  exceptions.py  jitterbuffer.py  rate.py  rtcdatachannel.py  rtcicetransport.py  rtcpeerconnection.py  rtcrtpreceiver.py  rtcsctptransport.py  sdp.py  stats.py
stubs/: aioice.pyi  audioop.pyi  av.pyi  crc32c.pyi  google_crc32c.pyi  pyee.pyi  uvloop.pyi
stubs/av/: __init__.pyi  frame.pyi
stubs/cryptography/: exceptions.pyi
stubs/pylsqpack/: __init__.pyi
styletransfer/server/: README.rst  index.html  server.py
tests/: codecs.py  test_asyncio.py  test_buffer.py  test_clock.py  test_codecs.py  test_connection.py  test_contrib_media.py  test_contrib_signaling.py  test_crypto.py  test_decoder_recovery.py  test_dtls.py  test_dynamic_bitrate.py  test_g711.py  test_g722.py  test_gop_size.py  test_h0.py  test_h264.py  test_h3.py  test_high_level.py  test_jitterbuffer.py  test_logger.py  test_mediastreams.py  test_opus.py  test_ortc.py  test_packet.py  test_packet_builder.py  test_rangeset.py  test_rate.py  test_recovery.py  test_recovery_e2e.py  test_recovery_fuzz.py  test_recovery_visual.py  test_retry.py  test_rtcdtlstransport.py  test_rtcicetransport.py  test_rtcpeerconnection.py  test_rtcrtpreceiver.py  test_rtcrtpsender.py  test_rtcrtptransceiver.py  test_rtcsctptransport.py  (+12 more)
(+34 files in other folders)
