[build-system]
requires = ["cffi>=1.0.0", "setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vsaiortc"
description = "An implementation of WebRTC and ORTC"
readme = "README.rst"
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Yash Chudasama", email = "yash@videosdk.live" },
    { name = "Ankit Chotaliya", email = "ankit@videosdk.live" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aioice>=0.9.0,<1.0.0",
    "av>=9.0.0,<13.0.0",
    "cffi>=1.0.0",
    "cryptography>=42.0.0",
    'dataclasses; python_version < "3.7"',
    "google-crc32c>=1.1",
    "pyee>=9.0.0",
    "pylibsrtp>=0.10.0",
    "pyopenssl>=24.0.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "aiohttp>=3.7.0",
    "coverage[toml]>=7.2.2",
    "numpy>=1.19.0",
]

[project.urls]
homepage = "https://github.com/zujonow/vs-aiortc"
issues = "https://github.com/zujonow/vs-aiortc/issues"
documentation = "https://docs.videosdk.live"

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]

[tool.coverage.run]
source = ["vsaiortc"]

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_decorators = true
ignore_missing_imports = true
mypy_path = "stubs"
strict_optional = false
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "W",  # pycodestyle
    "I",  # isort
]

[tool.setuptools.dynamic]
version = {attr = "vsaiortc.__version__"}

[tool.setuptools.packages.find]
exclude = ["_cffi_src"]
where = ["src"]
